Bug 357969 - Default sort order for variables, when debugging, are descending
Summary: Default sort order for variables, when debugging, are descending
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: CPP Debugger (other bugs)
Version First Reported In: 4.90.90
Platform: Other Linux
: NOR minor
Target Milestone: 5.0.0
Assignee: kdevelop-bugs-null
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2016-01-14 09:44 UTC by peje66
Modified: 2016-01-15 10:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description peje66 2016-01-14 09:44:20 UTC
Now that the variable list is sorted the default order should be ascending instead of descending.



Reproducible: Always
Comment 1 Kevin Funk 2016-01-14 10:32:19 UTC
@Mikhail: Care to have a look?
Comment 2 Mikhail Ivchenko 2016-01-14 11:26:47 UTC
(In reply to Kevin Funk from comment #1)
> @Mikhail: Care to have a look?

Yep, I will.
Comment 3 Kevin Funk 2016-01-15 10:01:33 UTC
Git commit 2136e7927e41a2c0b4555edf76f40daf174d3ca0 by Kevin Funk.
Committed on 15/01/2016 at 10:00.
Pushed by kfunk into branch '5.0'.

Use ascending order by default in variables list

Summary:
Fixes

Test Plan: Works as expected

Reviewers: kfunk

Subscribers: kdevelop-devel, #kdevelop

Projects: #kdevelop

Differential Revision: https://phabricator.kde.org/D822

M  +1    -0    debugger/variable/variablewidget.cpp

http://commits.kde.org/kdevplatform/2136e7927e41a2c0b4555edf76f40daf174d3ca0