Use ascending order by default in variables list

Summary:
Fixes
BUG: 357969

Test Plan: Works as expected

Reviewers: kfunk

Subscribers: kdevelop-devel, #kdevelop

Projects: #kdevelop

Differential Revision: https://phabricator.kde.org/D822